ci: trigger workflow check at 2025-04-04 21:44:57